完成首页文章列表优化详情展示

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     implementation rootProject.ext.realtimeblurview
     //banner
     implementation rootProject.ext.bgaBanner
+    //下拉刷新
+    implementation rootProject.ext.smartrefresh
 }
