--- a/login/src/main/AndroidManifest.xml
+++ b/login/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="chenrui.com.login">
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
@@ -7,7 +8,9 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
-        android:theme="@style/AppTheme">
+        android:name=".LoginApp"
+        android:theme="@style/login_AppTheme"
+        tools:replace="android:theme,android:name">
         <activity
             android:name=".LoginActivity">
         </activity>
