--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="chenrui.com.kotlindemo">
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
@@ -20,7 +21,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:theme,android:name">
         <activity android:name=".kotlin.ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -28,10 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name=".kotlin.ui.activity.LoginActivity"
-            android:label="@string/title_activity_login">
-        </activity>
+
         <activity
             android:name=".kotlin.ui.activity.ArticalDetailActivity"
             android:label="@string/title_activity_artical_detail">
