--- a/componentbase/build.gradle
+++ b/componentbase/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 27
 
@@ -12,7 +14,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        kapt {
+            arguments {
+                arg("moduleName", project.getName())
+            }
+        }
     }
 
     buildTypes {
