--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     //依赖组件通信服务基础库
     api project(':componentbase')
     //ARouter 阿里路由框架
@@ -64,6 +65,7 @@ dependencies {
     //持久化cookie
     api rootProject.ext.cookie
     //生命周期管理 rxlifecycle
-    //api 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle-kotlin:2.2.2'
     api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
+
+    api 'com.github.zackratos.ultimatebar:ultimatebar2:2.0.0'
 }
